# pss-api-parser

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  TODO.md  anon.py  gen.py  main.py  merge.py  parse.py  parsed_flows_schema.json  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.in  requirements.txt  setup.cfg
doc/: cacheable_endpoints_schema.json  parsed_flows_schema.json
examples/: pss_api_cacheable_endpoints.json  pss_api_complete_structure.json  pss_api_ios_v0.989.9402.json  pss_api_ios_v0.989.9402_anonymized.flows  pss_api_ios_v0.989.9402_anonymized.json  pss_api_ios_v0.994.1.11095_anonymized.flows  pss_api_ios_v0.994.1.11095_anonymized.json  pss_api_overrides.json  pss_api_steam_anonymized.flows  pss_api_steam_anonymized.json  pss_api_steam_v0.991.4.json  pss_api_steam_v0.991.4_anonymized.flows  pss_api_steam_v0.991.4_anonymized.json  pss_api_steam_v0.992_anonymized.flows  pss_api_steam_v0.992_anonymized.json  pss_api_steam_v0.994.1.8792_anonymized.json  pss_api_structure_v0.992.json  pss_enums.json  pss_steam_v0.994.1.8792_dump_enums.json  pss_v0.992_dump_enums.json
src/: anonymize.py  blacklisted_endpoints.json  blacklisted_services.json  enums.py  flowdetails.py  generate.py  merge.py  objectstructure.py  parse.py  utils.py
src/pss_api_parser/: anonymize.py  blacklisted_endpoints.json  blacklisted_services.json  enums.py  flowdetails.py  generate.py  main.py  merge.py  parse.py  parse_command.py  ui.py  utils.py
src/pss_api_parser/backend/: __init__.py  anonymize.py  enums.py  flowdetails.py  generate.py  merge.py  parse.py  utils.py
src/pss_api_parser/templates/python/entities/: entity.jinja2  entity_base.jinja2  entity_base_raw.jinja2  entity_raw.jinja2
src/pss_api_parser/templates/python/enums/: enum_init.jinja2  enum_int_flag.jinja2  enum_str.jinja2
src/pss_api_parser/templates/python/services/: service_raw.jinja2
src/templates/: client.jinja2  client_base.jinja2  entities_init.jinja2  entities_raw_init.jinja2  entities_raw_init.py  entity.jinja2  entity.py  entity_raw.jinja2  entity_raw.py  enum_init.jinja2  enum_int.jinja2  enum_str.jinja2  service.jinja2  service.py  service_raw.jinja2  service_raw.py  services_init.jinja2  services_init.py  services_raw_init.jinja2  services_raw_init.py
src/templates/entities/: entities_init.jinja2  entity.jinja2  entity_base.jinja2  entity_base_raw.jinja2  entity_raw.jinja2
src/templates/python/: client_base.jinja2  core.jinja2
src/templates/python/entities/: entities_init.jinja2  entities_raw_init.jinja2  entity_base.jinja2  entity_base_raw.jinja2  entity_raw.jinja2
src/templates/python/enums/: enum_init.jinja2  enum_int.jinja2
src/templates/python/services/: service.jinja2  service_base.jinja2  service_raw.jinja2  services_init.jinja2  services_raw_init.jinja2
src/templates/python/utils/: utils_parse.jinja2
src/templates/services/: service.jinja2  service_base.jinja2
tests/: test_generate.py
