[project]
name = "pss-api-parser"
description = "Parses the structure of the PSS API based on flows documented through mitmproxy"
requires-python = ">=3.11.7"
license = {file = "LICENSE"}
authors = [
    {name = "The worst.", email = "theworstpss@gmail.com"},
    {name = "Solevis"}
]
readme = "README.md"
keywords = [
    "Pixel Starships",
    "PSS",
    "API",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "mitmproxy>=9.0.1, <10",
    "jinja2>=3.1.2, <4",
    "typer>=0.15.3",
    "contexttimer>=0.3.3,<1",
]

[project.urls]
Repository = "https://github.com/PSS-Tools-Development/pss-api-parser"
Issues = "https://github.com/PSS-Tools-Development/pss-api-parser/issues"
Changelog = "https://github.com/PSS-Tools-Development/pss-api-parser/releases"

[project.scripts]
pssapiparser = "pss_api_parser.main:app"

[tool.hatch.version]
path = "src/pss_api_parser/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "flake8-black>=0.3.6",
    "flake8-bugbear>=24.12.12",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "vulture>=2.14",
]

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]
extend-ignore = ["B008","B907","B950","E203","E501","W291","W503"]
show-source = true
statistics = true
select = ["B","B9","BLK","C","E","F","W"]
max-complexity = 10
max-line-length = 150

[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true

[tool.black]
line-length = 150
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
src_paths = ["./src/pss_api_parser", "./tests"]
py_version = 311
skip_gitignore = true
skip_glob = ["bin/*"]
profile = "black"
line_length = 150
lines_after_imports = 2

[tool.vulture]
min_confidence = 100
paths = ["./src/pss_api_parser"]
sort_by_size = true
